--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <section class="hero-image">
         <div class="container">
-          <h1 class="heading">Неопознанный Енот</h1>
+          <h1 class="heading">Неопознанный Енот Test</h1>
           <p>id1959291</p>
         </div>
       </section>
